# Rehab-AI

./: .gitignore  Dockerfile  nixpacks.toml  railway.toml
backend/: debug_agent.py  main.py  pyproject.toml  rehab_agent.py  requirements.txt  server.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  main.jsx
